tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_79.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := (- (((1 + 2) + (- z)) * (- (0 * 1))));
               p := ((((+ 200) MOD (200 - 0)) + ((1223 + 1223) DIV (0 MOD x))) <= (- ((0 DIV x) DIV (z + 1))));
               x := (- (((x DIV y) MOD (- z)) * (- (200 + 1223))));
               z := ((((1223 DIV 1) DIV (+ z)) MOD ((+ 0) - (- z))) DIV (((z + 0) DIV (0 DIV 1)) - ((200 MOD 1223) + (2 DIV 1223))));
               z := ((+ (+ (z MOD 0))) + (((2 * z) MOD (- y)) MOD (- (z - x))));
               y := (((+ (200 * z)) + (+ (1 MOD z))) * (((- y) - (+ 1)) DIV ((+ x) MOD (2 MOD 200))));
               y := (- (- (- (1223 + x))));
  (* error *)  q := (~ ((~ (q > 1223)) & ((z >= 0) OR (x # y))));
               r := ((+ ((200 MOD 1223) + (z + 0))) < (+ (- (y DIV x))));
               x := (((+ (0 MOD y)) MOD (- (0 DIV x))) + (((1223 MOD 200) - (z MOD x)) - ((1223 MOD z) DIV (y - 1))))
END Test18.